edit test directory and regex

--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "rootDir": "test",
+    "testRegex": ".*.spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
