--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "test",
+    "roots": ["src", "test"],
     "testRegex": ".*.spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
