fix: use environment variable NODE_ENV

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017
-MONGODB_USERNAME=adminddd
-MONGODB_PASSWORD=adminfff
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=admin
 MONGODB_DB_NAME=chatting
