--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "NODE_ENV=local nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -58,7 +58,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "test",
+    "roots": ["src", "test"],
     "testRegex": ".*.spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
